--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,11 +10,11 @@
 :: 1.0 Base CSS
 :: 2.0 Top Header Area CSS
 :: 3.0 Menu Area CSS
-:: 4.0 Wellcome Area CSS 
-:: 5.0 Top Feature Area CSS 
-:: 6.0 Blog Area CSS 
-:: 7.0 Instagram Area CSS 
-:: 8.0 Footer Social Area CSS 
+:: 4.0 Wellcome Area CSS
+:: 5.0 Top Feature Area CSS
+:: 6.0 Blog Area CSS
+:: 7.0 Instagram Area CSS
+:: 8.0 Footer Social Area CSS
 :: 9.0 Goole Map Area CSS
 :: 10.0 Sidebar Area CSS
 :: 11.0 Breadcumb Area CSS
@@ -63,6 +63,7 @@ h6 {
     color: #232d37;
     line-height: 1.25;
 }
+
 
 p {
     color: #51545f;
@@ -478,7 +479,7 @@ li {
 }
 
 /* --------------------
-:: 4.0 Wellcome Area CSS 
+:: 4.0 Wellcome Area CSS
 -------------------- */
 
 .welcome-single-slide {
@@ -571,7 +572,7 @@ li {
 }
 
 /* --------------------
-:: 5.0 Top Feature Area CSS 
+:: 5.0 Top Feature Area CSS
 -------------------- */
 
 .categories_area {
@@ -619,7 +620,7 @@ li {
 }
 
 /* --------------------
-:: 6.0 Blog Area CSS 
+:: 6.0 Blog Area CSS
 -------------------- */
 
 .post-thumb img {
@@ -756,7 +757,7 @@ li {
 }
 
 /* --------------------
-:: 7.0 Instagram Area CSS 
+:: 7.0 Instagram Area CSS
 -------------------- */
 
 .instagram_gallery_item {
@@ -823,69 +824,21 @@ li {
 
 
 /* --------------------
-:: 8.0 Footer Social Area CSS 
+:: 8.0 Footer Social Area CSS
 -------------------- */
 
-.footer-social-area {
-    border-bottom: 1px solid #eeeeee;
-    padding: 50px 0;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between
-}
 
-.single-icon > a {
-    color: #51545f;
-    font-size: 14px;
-    font-weight: 500;
-    text-transform: uppercase;
-}
 
-.single-icon > a:hover {
-    color: #fc6c3f;
-}
 
-.single-icon > a > i {
-    font-size: 16px;
-    padding-right: 12px;
-}
 
-.footer-content {
-    padding: 50px 0 65px 0;
-    border-bottom: 1px solid #eeeeee;
-}
 
-.footer-logo-area .yummy-logo {
-    font-family: 'Shadows Into Light Two', cursive;
-    font-size: 60px;
-    margin-bottom: 0;
-    padding: 0 0 20px 0;
-    display: inline-block;
-    color: #232d37;
-}
 
-.copy_right_text {
-    width: 100%;
-    height: 70px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center
-}
 
-.copy_right_text > p {
-    font-size: 14px;
-    color: #b5aec4;
-    margin-bottom: 0;
+footer{
+    background-color: rgb(250, 97, 26);
 }
-
-.footer_area .navbar.navbar-expand-lg .navbar-nav .nav-link {
-    padding-bottom: 0;
+footer a{
+    color:#fff;
 }
 
 /* --------------------
@@ -1203,7 +1156,7 @@ li {
     background-position: center center;
 }
 
-/* -------------------- 
+/* --------------------
 :: 14.0 Single Blog CSS
 -------------------- */
 
